layout: Fix unresponsive NavBar on small screens.

--- a/themes/cactus/static/css/style-white.css
+++ b/themes/cactus/static/css/style-white.css
@@ -453,7 +453,6 @@
     margin: 0;
     padding: 0;
     height: 100%;
-    border-top: 2px solid #383838;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
   }
@@ -652,6 +651,9 @@
     -webkit-filter: none;
   }
   @media screen and (max-width: 480px) {
+    #my-header {
+      flex-direction: column;
+    }
     #header #title {
       display: table;
       margin-right: 5rem;
@@ -660,6 +662,9 @@
     #header #title h1 {
       display: table-cell;
       vertical-align: middle;
+    }
+    #header #nav ul {
+      padding-bottom: 1rem;
     }
     #header #nav ul a:hover {
       background: none;
@@ -670,8 +675,8 @@
     }
     #header #nav ul li.icon {
       position: absolute;
-      top: 77px;
-      right: 1rem;
+      top: 3.6rem;
+      right: 0rem;
       display: inline-block;
     }
     #header #nav ul.responsive li {
